Rename response
