# src/StorageManager.Application/CQRS/QueryHandlers/GetSiteQueryHandler.cs
@@ -11,9 +11,10 @@ using StorageManager.Infrastructure.Interfaces;
 
 namespace StorageManager.Application.CQRS.QueryHandlers
 {
-    public class GetSiteQueryHandler(ISiteRepository _siteRepository, IMapper _mapper) : IRequestHandler<GetSiteQuery, OneOf<Site, NotFoundResult, ForbiddenResult, BusinessErrorResult>>
+    public class GetSiteQueryHandler(ISiteRepository _siteRepository, IMapper _mapper) 
+        : IRequestHandler<GetSiteQuery, OneOf<SiteResponse, NotFoundResult, ForbiddenResult, BusinessErrorResult>>
     {
-        public async Task<OneOf<Site, NotFoundResult, ForbiddenResult, BusinessErrorResult>> Handle(GetSiteQuery request, CancellationToken cancellationToken)
+        public async Task<OneOf<SiteResponse, NotFoundResult, ForbiddenResult, BusinessErrorResult>> Handle(GetSiteQuery request, CancellationToken cancellationToken)
         {
             var site = await _siteRepository.GetSiteByIdAsync(request.SiteId);
             if (site == null)
@@ -26,7 +27,7 @@ namespace StorageManager.Application.CQRS.QueryHandlers
                 return new ForbiddenResult();
             }
 
-            return _mapper.Map<Site>(site);
+            return _mapper.Map<SiteResponse>(site);
         }
 
         private bool UserHasPermissionToViewSite(string siteId)
