# src/StorageManager.Service.Host/Controllers/ModuleController.cs
@@ -7,7 +7,7 @@ namespace StorageManager.Service.Host.Controllers
     [ApiController]
     public class ModuleController : ModuleControllerBase
     {
-        public override Task<ActionResult<Module>> CreateModule(string siteId, string areaId, [FromBody] CreateModuleRequest body)
+        public override Task<ActionResult<ModuleResponse>> CreateModule(string siteId, string areaId, [FromBody] CreateModuleRequest body)
         {
             throw new NotImplementedException();
         }
@@ -17,17 +17,17 @@ namespace StorageManager.Service.Host.Controllers
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<ICollection<Module>>> GetAllModules(string siteId, string areaId)
+        public override Task<ActionResult<ICollection<ModuleResponse>>> GetAllModules(string siteId, string areaId)
         {
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<Module>> GetModuleById(string siteId, string areaId, string moduleId)
+        public override Task<ActionResult<ModuleResponse>> GetModuleById(string siteId, string areaId, string moduleId)
         {
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<Device>> Module_CreateDevice(string siteId, string areaId, string moduleId, [FromBody] CreateDeviceRequest body)
+        public override Task<ActionResult<DeviceResponse>> Module_CreateDevice(string siteId, string areaId, string moduleId, [FromBody] CreateDeviceRequest body)
         {
             throw new NotImplementedException();
         }
@@ -37,22 +37,22 @@ namespace StorageManager.Service.Host.Controllers
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<ICollection<Device>>> Module_GetAllDevices(string siteId, string areaId, string moduleId)
+        public override Task<ActionResult<ICollection<DeviceResponse>>> Module_GetAllDevices(string siteId, string areaId, string moduleId)
         {
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<Device>> Module_GetDevice(string siteId, string areaId, string moduleId, string deviceId)
+        public override Task<ActionResult<DeviceResponse>> Module_GetDevice(string siteId, string areaId, string moduleId, string deviceId)
         {
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<Device>> Module_UpdateDevice(string siteId, string areaId, string moduleId, string deviceId, [FromBody] UpdateDeviceRequest body)
+        public override Task<ActionResult<DeviceResponse>> Module_UpdateDevice(string siteId, string areaId, string moduleId, string deviceId, [FromBody] UpdateDeviceRequest body)
         {
             throw new NotImplementedException();
         }
 
-        public override Task<ActionResult<Module>> UpdateModule(string siteId, string areaId, string moduleId, [FromBody] UpdateModuleRequest body)
+        public override Task<ActionResult<ModuleResponse>> UpdateModule(string siteId, string areaId, string moduleId, [FromBody] UpdateModuleRequest body)
         {
             throw new NotImplementedException();
         }
